<resources>
    <string name="app_name">Music Flow</string>
    <string name="back">Back</string>
    <string name="playlist">PLAYLIST</string>
    <string name="latest_song">Latest Song</string>
    <string name="tracks_count">24 Tracks</string>
    <string name="play_all">Play All</string>
    <string name="artists_in_playlist">Artists in Playlist</string>
    <string name="see_all">See All</string>
    <string name="album_cover">Album Cover</string>
    <string name="item_image">Item Image</string>
    <string name="text_preview">Preview</string>

    <string name="label_home">Home</string>
    <string name="label_songs">Songs</string>
    <string name="label_settings">Setting</string>
    <string name="label_playlist">My Playlist</string>

    <string name="title_settings">SETTING</string>
    <string name="settings_dark_theme">Dark theme</string>
    <string name="settings_language">Language</string>
    <string name="settings_account">Account</string>
    <string name="settings_logout">Logout</string>

    <string name="acc_name">Name</string>
    <string name="acc_email">Email</string>
    <string name="acc_phone">Phone</string>
    <string name="acc_password">Password</string>
    <string name="acc_dob">Date of birth</string>

    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

    <string name="pick_some_artist_you_like">Pick some artist you like</string>

    <string name="facebook_app_id">2556431908064167</string>
    <string name="facebook_client_token">10424b5864e1461ce80758b256e6998</string>
    <string name="fb_login_protocol_scheme">fb2556431908064167</string>

    <string name="default_web_client_id">475240300547-efdd3t92iqg5d3t8lt07mk8r026kohmc.apps.googleusercontent.com</string>
</resources>